--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,6 +7,7 @@
         <div>
             <!-- A wrapper for all the blog posts -->
             <div class="posts">
+              {{ with .Site.GetPage "section" "blog" }}
               {{ range .Paginator.Pages }}
                 <h1 class="content-subhead">{{ .Date | time.Format ":date_full" }}</h1>
                 <section class="post">
@@ -29,6 +30,7 @@
                         {{ .Content }}
                     </div>
                 </section>
+              {{ end }}
               {{ end }}
             </div>
             {{ partial "pagination.html" . }}
