--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,44 +1,3 @@
-{{ partial "header.html" . }}
-
-<div id="layout" class="pure-g">
-    {{ partial "sidebar.html" . }}
-
-    <div class="content pure-u-1 pure-u-md-3-4">
-        <div>
-            <!-- A wrapper for all the blog posts -->
-            <div class="posts">
-              {{ with .Site.GetPage "section" "blog" }}
-              {{ range .Paginator.Pages }}
-                <h1 class="content-subhead">{{ .Date | time.Format ":date_full" }}</h1>
-                <section class="post">
-                    <header class="post-header">
-
-                        <a href="{{ .Permalink }}" class="post-title">{{ .Title }}</a>
-
-                        <p class="post-meta">
-                            {{ with .Params.author }}
-                                By <strong class="post-author">{{ . }}</strong>
-                            {{ end }}
-                            {{ if isset .Params "categories" }}
-                                under 
-                                {{ range .Params.categories }}<a class="post-category post-category-{{ . }}" href='{{ ( printf "categories/%s" . ) | absURL }}'>{{ . }}</a>{{ end }}
-                            {{ end }}
-                        </p>
-                    </header>
-
-                    <div class="post-description">
-                        {{ .Content }}
-                    </div>
-                </section>
-              {{ end }}
-              {{ end }}
-            </div>
-            {{ partial "pagination.html" . }}
-            {{ partial "footer.html" . }}
-        </div>
-    </div>
-</div>
-
-{{ partial "analytics.html" . }}
-</body>
-</html>
+{{ define "main" }}
+{{ partial "posts" . }}
+{{ end }}
