--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -24,6 +24,6 @@
     <link rel="stylesheet" href='{{ "css/all.min.css" | absURL }}'>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href='{{ "index.xml" | absURL }}' />
+    <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href='{{ "index.xml" | absLangURL }}' />
 </head>
 <body>
