--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -47,7 +47,7 @@
                 </li>
                 {{ end }}
                 <li class="nav-item">
-                    <a class="pure-button" href='{{ "index.xml" | absURL }}'>
+                    <a class="pure-button" href='{{ "index.xml" | absLangURL }}'>
                         <i class="fa fa-rss"></i>{{ if not .Site.Params.hideSidebarIconText }} rss{{ end }}
                     </a>
                 </li>
