fix: use baseof everywhere

--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -1,9 +1,4 @@
-{{ partial "header.html" . }}
-
-<div id="layout" class="pure-g">
-  {{ partial "sidebar.html" . }}
-
-  <div class="content pure-u-1 pure-u-md-3-4">
+{{ define "main" }}
     <div>
       <section class="post">
         <header>
@@ -14,11 +9,4 @@
         </div>
       </section>
     </div>
-    {{ partial "footer.html" . }}
-  </div>
-</div>
-</div>
-
-{{ partial "analytics.html" . }}
-</body>
-</html>
+{{ end }}
